@@ -162,14 +162,11 @@ if(sqgetGlobalVar('REQUEST_METHOD', $req_method, SQ_SERVER) && $req_method == 'P
      * Add new address                                *
      **************************************************/
     if (isset($addaddr)) {
-        foreach( $addaddr as $k => $adr ) {
-            $addaddr[$k] = strip_tags( $adr );
+        if (isset($backend)) {
+            $r = $abook->add($addaddr, $backend);
+        } else {
+            $r = $abook->add($addaddr, $abook->localbackend);
         }
-    if (isset($backend)) {
-      $r = $abook->add($addaddr, $backend);
-    } else {
-      $r = $abook->add($addaddr, $abook->localbackend);
-    }
 
         /* Handle error messages */
         if (!$r) {
